RESOLVED FIXED225917
Temporarily revert r276592 as it breaks some native apps
https://bugs.webkit.org/show_bug.cgi?id=225917
Summary Temporarily revert r276592 as it breaks some native apps
Keith Miller
Reported 2021-05-18 07:56:37 PDT
Temporarily revert r276592 as it breaks some native apps
Attachments
Patch (180.39 KB, patch)
2021-05-18 07:57 PDT, Keith Miller
no flags
Patch (180.11 KB, patch)
2021-05-18 10:12 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2021-05-18 07:57:15 PDT
Keith Miller
Comment 2 2021-05-18 10:12:58 PDT
EWS Watchlist
Comment 3 2021-05-18 10:13:54 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 4 2021-05-18 11:01:54 PDT
Committed r277665 (237867@main): <https://commits.webkit.org/237867@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428951 [details].
Radar WebKit Bug Importer
Comment 5 2021-05-18 11:02:21 PDT
Note You need to log in before you can comment on or make changes to this bug.